# dolphin-audio-converter

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dolphin-audio-converter.desktop  dolphin-audio-converter.py  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
